--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,3 @@
-# These owners will be the default owners for everything in
-# the repo. Unless a later match takes precedence,
-# @primary-owner and @secondary-owner will be requested for
-# review when someone opens a pull request.
-*       @primary-owner @secondary-owner
+# Codeowner(s)
+
+*       @yiwen-h
